<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutmargin"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/normaltext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_notification_bell"
            android:layout_width="@dimen/iv20dp"
            android:layout_height="@dimen/iv20dp"
            android:layout_marginEnd="@dimen/layoutmargin"
            android:src="@drawable/notification_bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_welcome" />

        <TextView
            android:id="@+id/tv_todays_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layoutmargin"
            android:layout_marginTop="@dimen/margintop15dp"
            android:padding="@dimen/text_padding"
            android:text="@string/today_s_total"
            android:textColor="@color/white"
            android:textSize="@dimen/heading18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <TextView
            android:id="@+id/tv_todays_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layoutmargin"
            android:layout_marginTop="@dimen/layoutmargin"
            android:layout_marginBottom="@dimen/margin12dp"
            android:padding="@dimen/text_padding"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="@dimen/text22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_todays_total" />


        <TextView
            android:id="@+id/tv_yesterdays_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop15dp"
            android:layout_marginEnd="@dimen/layoutmargin"
            android:padding="@dimen/text_padding"
            android:text="@string/yesterday_s_total"
            android:textColor="@color/white"
            android:textSize="@dimen/heading18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_todays_total"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_yesterdays_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layoutmargin"
            android:layout_marginEnd="@dimen/layoutmargin"
            android:layout_marginBottom="@dimen/margin12dp"
            android:padding="@dimen/text_padding"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="@dimen/text22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_yesterdays_total" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_constraintlayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutmargin"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/layoutmargin"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactions_recyclerview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutmargin">

            <TextView
                android:id="@+id/tv_billamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/textview_mainheading"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layoutmargin"
                android:hint="@string/Rs_amount"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="@dimen/edittext_mainheading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_billamount" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

   <!--> <GridView
        android:id="@+id/gridview_saleoptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_amount" />  <!-->

    <FrameLayout
        android:id="@+id/framelayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_amount" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/selecteditem"
        app:itemIconTint="@drawable/selecteditem"
        app:menu= "@menu/menu_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>