<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyThemeOverlay_Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAEAEA"
        android:paddingBottom="@dimen/iv20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/successanimation" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\u20B9 10.00"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text22sp"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView" />

        <TextView
            android:id="@+id/tv_transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin5dp"
            android:text="via Cash"
            android:textColor="@color/green"
            android:textSize="@dimen/heading18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_amount"
            app:layout_constraintStart_toEndOf="@id/tv_amount" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layoutmargin"
            android:text="Wed 17/11/2020 8:30 pm"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/heading18sp"
            android:layout_marginBottom="@dimen/margin35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="@dimen/heading18sp"
        android:typeface="serif"
        android:layout_marginTop="@dimen/layoutmargin"
        android:layout_marginStart="@dimen/layoutmargin"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_success"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Success"
        android:textColor="@color/green"
        android:textSize="@dimen/heading18sp"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/layoutmargin"
        android:layout_marginStart="@dimen/margin35dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_success"
        app:layout_constraintStart_toEndOf="@id/tv_status"/>

    <View
        android:id="@+id/view_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layoutmargin"
        android:background="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_success"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/heading18sp"
        android:typeface="serif"
        android:layout_marginTop="@dimen/layoutmargin"
        android:layout_marginStart="@dimen/layoutmargin"
        app:layout_constraintTop_toBottomOf="@+id/view_status"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxxxx2550"
        android:textColor="@color/black"
        android:textSize="@dimen/heading18sp"
        android:typeface="serif"
        android:layout_marginTop="@dimen/layoutmargin"
        android:layout_marginStart="@dimen/margin35dp"
        app:layout_constraintTop_toBottomOf="@+id/view_status"
        app:layout_constraintStart_toEndOf="@id/tv_phone"/>

    <View
        android:id="@+id/phoneView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layoutmargin"
        android:background="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"/>

    <Button
        android:id="@+id/buttonprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print"
        android:textStyle="normal"
        android:textColor="@color/orange"
        android:textSize="@dimen/smalltext12sp"
        android:background="@drawable/border"
        android:paddingVertical="@dimen/margin5dp"
        android:paddingHorizontal="@dimen/iv20dp"
        android:layout_marginTop="@dimen/iv20dp"
        android:layout_marginEnd="@dimen/margin12dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonrecepit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonrecepit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_receipt"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:background="@drawable/border"
        android:textSize="@dimen/smalltext12sp"
        android:layout_marginTop="@dimen/iv20dp"
        android:layout_marginStart="@dimen/margin12dp"
        android:paddingVertical="@dimen/margin5dp"
        android:paddingHorizontal="@dimen/iv20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonprint"
        app:layout_constraintTop_toBottomOf="@id/phoneView" />






</androidx.constraintlayout.widget.ConstraintLayout>